RESOLVED FIXED305654
[threaded-animations] REGRESSION: scrolling https://scroll-driven-animations.style/ makes content disappear on iPad
https://bugs.webkit.org/show_bug.cgi?id=305654
Summary [threaded-animations] REGRESSION: scrolling https://scroll-driven-animations....
Antoine Quint
Reported 2026-01-16 10:20:45 PST
The home page for https://scroll-driven-animations.style/ regressed when we enabled Threaded Scroll-driven Animations on iPad: as you scroll the various cards disappear prior to exiting the screen. Scrolling in the opposite direction brings them back right away.
Attachments
Antoine Quint
Comment 1 2026-01-16 10:20:57 PST
Antoine Quint
Comment 2 2026-01-16 10:29:55 PST
EWS
Comment 3 2026-01-16 16:00:22 PST
Committed 305743@main (28e155992e27): <https://commits.webkit.org/305743@main> Reviewed commits have been landed. Closing PR #56722 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.